--- a/cat-timer-web/.github/workflows/deploy.yml
+++ b/cat-timer-web/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # ここが main になっているか確認
+      - main
 
 jobs:
   build-and-deploy:
