--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: cat-timer-web # すべてのコマンドをこのフォルダで実行するように固定
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,12 +21,13 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: cat-timer-web/package-lock.json
 
-      - name: Install and Build
-        run: |
-          cd cat-timer-web
-          npm install
-          npm run build
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
