--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: cat-timer-web # すべてのコマンドをこのフォルダで実行するように固定
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,13 +17,15 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          # ここで package-lock.json の場所を正確に教える
           cache-dependency-path: cat-timer-web/package-lock.json
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
+      - name: Install and Build
+        # 「フォルダに移動」→「インストール」→「ビルド」を一気に行う
+        run: |
+          cd cat-timer-web
+          npm install
+          npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
