--- a/cat-timer-web/package.json
+++ b/cat-timer-web/package.json
@@ -9,5 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-     }
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.1"
+  }
 }
