--- a/cat-timer-web/package.json
+++ b/cat-timer-web/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@vitejs/plugin-react-swc": "^3.5.0"
   }
 }
